@@ -17,7 +17,7 @@ GITHUB_ARTIFACT_ZIPS = ["linux.zip", "mac.zip", "windows.zip"]
 ARTIFACT_MAP = { "armhf-linux/bliss-mixer":  "armhf-linux/bliss-mixer",
                  "arm-linux/bliss-mixer":    "arm-linux/bliss-mixer",
                  "x86_64-linux/bliss-mixer": "x86_64-linux/bliss-mixer",
-                 "bliss-mixer":              "darwin/bliss-mixer",
+                 "bliss-mixer":              "mac/bliss-mixer",
                  "bliss-mixer.exe":          "windows/bliss-mixer.exe"}
 
 def info(s):
