@@ -1,6 +1,8 @@
 0.0.2
 -----
 1. Ensure all prefs are prefixed prev_ in settings HTML file.
+2. Add 'Bin/windows' to LMS's bin search paths if running under windows.
+   Likewise add 'Bin/mac' for mac.
 
 0.0.1
 -----
